tests/derive_ui/flatten_enum_in_struct.rs
#[derive(clap::Parser)]
struct Opt {
    #[command(flatten)]
    sub: SubCmd,
}

#[derive(clap::Parser)]
enum SubCmd {}

fn main() {}
